Add an insert route
